Nâng cấp navbar, menu khi ở mobile, thêm ảnh các khối

--- a/src/components/about.html
+++ b/src/components/about.html
@@ -1,8 +1,8 @@
-<section class="bg-white py-16">
+<section class="bg-white py-6">
   <div class="mx-auto px-6 text-center">
     <!-- Tiêu đề -->
     <div class="p-6 mx-auto shadow rounded-lg max-w-[1900px] mb-6">
-      <h2 class="text-2xl md:text-4xl font-bold text-green-700 uppercase mb-2">
+      <h2 class="text-2xl md:text-3xl font-bold text-green-700 uppercase mb-2">
         Phòng Khám Đông Y
       </h2>
       <p class="border-b-2 mx-auto border-yellow-300 w-64 mb-6"></p>
@@ -22,15 +22,15 @@
       </p>
     </div>
     <!-- Dịch vụ -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-20">
+    <div class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-20">
       <!-- Item -->
       <div
         class="bg-white p-6 rounded-xl hover:shadow-xl transition duration-300 group shadow"
       >
         <img
-          src="https://placehold.co/300x300"
+          src="../../assets/images/anh-bac-si-27.png"
           alt="Bác sĩ tận tâm"
-          class="rounded-full w-20 h-20 mb-4 mx-auto group-hover:scale-105 transition-transform border-2 border-green-500"
+          class="rounded-full w-40 h-40 mb-4 mx-auto group-hover:scale-105 transition-transform border-2 border-green-500"
         />
 
         <div>
@@ -49,9 +49,9 @@
         class="bg-white p-6 rounded-xl hover:shadow-xl transition duration-300 group shadow"
       >
         <img
-          src="https://placehold.co/300x300"
+          src="../../assets/images/bap-thuoc-dongy-cach-dung.png"
           alt="Bác sĩ tận tâm"
-          class="rounded-full w-20 h-20 mb-4 mx-auto group-hover:scale-105 transition-transform border-2 border-green-500"
+          class="rounded-full w-40 h-40 mb-4 mx-auto group-hover:scale-105 transition-transform border-2 border-green-500"
         />
 
         <h3 class="text-green-700 font-bold uppercase text-sm mb-2">
@@ -67,9 +67,9 @@
         class="bg-white p-6 rounded-xl hover:shadow-xl transition duration-300 group shadow"
       >
         <img
-          src="https://placehold.co/300x300"
+          src="../../assets/images/vat-ly-tri-lieu.png"
           alt="Bác sĩ tận tâm"
-          class="rounded-full w-20 h-20 mb-4 mx-auto group-hover:scale-105 transition-transform border-2 border-green-500"
+          class="rounded-full w-40 h-40 mb-4 mx-auto group-hover:scale-105 transition-transform border-2 border-green-500"
         />
 
         <h3 class="text-green-700 font-bold uppercase text-sm mb-2">
@@ -86,9 +86,9 @@
         class="bg-white p-6 rounded-xl hover:shadow-xl transition duration-300 group shadow"
       >
         <img
-          src="https://placehold.co/300x300"
+          src="../../assets/images/nghien-cuu.png"
           alt="Bác sĩ tận tâm"
-          class="rounded-full w-20 h-20 mb-4 mx-auto group-hover:scale-105 transition-transform border-2 border-green-500"
+          class="rounded-full w-40 h-40 mb-4 mx-auto group-hover:scale-105 transition-transform border-2 border-green-500"
         />
 
         <h3 class="text-green-700 font-bold uppercase text-sm mb-2">
