--- a/src/components/banner.html
+++ b/src/components/banner.html
@@ -1,5 +1,6 @@
 <section class="bg-white mb-1 shadow relative">
-  <div class="swiper-container w-full mx-auto">
+  <div class="swiper-container w-full mx-auto overflow-hidden">
+    <!-- Hide overflow here -->
     <div class="swiper-wrapper">
       <!-- Slide 1 -->
       <div class="swiper-slide">
@@ -34,10 +35,10 @@
 
     <!-- Navigation buttons -->
     <div
-      class="swiper-button-next text-white text-3xl absolute top-1/2 transform -translate-y-1/2 right-6 bg-black rounded-full p-2 opacity-70 hover:opacity-100 transition-all"
+      class="swiper-button-next text-white text-xl absolute top-1/2 transform -translate-y-1/2 right-6 rounded-full p-2 opacity-70 hover:opacity-100 transition-all z-10"
     ></div>
     <div
-      class="swiper-button-prev text-white text-3xl absolute top-1/2 transform -translate-y-1/2 left-6 bg-black rounded-full p-2 opacity-70 hover:opacity-100 transition-all"
+      class="swiper-button-prev text-white text-xl absolute top-1/2 transform -translate-y-1/2 left-6 rounded-full p-2 opacity-70 hover:opacity-100 transition-all z-10"
     ></div>
   </div>
 </section>
