--- a/src/components/card-doctor.html
+++ b/src/components/card-doctor.html
@@ -1,14 +1,16 @@
-<section class="p-6 bg-gray-50">
-  <h2 class="text-3xl text-center font-semibold text-green-600 mb-8">
+<section class="mb-6">
+  <h2
+    class="bg-green-50 p-6 text-center text-2xl md:text-3xl font-bold text-green-700 uppercase mb-4"
+  >
     Đội Ngũ Bác Sĩ
   </h2>
-  <div class="grid md:grid-cols-4 gap-8">
+  <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 lg:gap-4">
     <!-- Bác sĩ 1 -->
     <div
       class="text-center p-4 bg-white rounded-lg shadow-lg transform hover:scale-105 transition-all duration-300"
     >
       <img
-        src="https://placehold.co/300x300"
+        src="../../assets/images/anh-bac-si-27.png"
         alt="Bác sĩ A"
         class="w-32 h-32 mx-auto rounded-full object-cover mb-4 border-4 border-green-500 transition-all duration-300"
       />
@@ -21,12 +23,12 @@
       class="text-center p-4 bg-white rounded-lg shadow-lg transform hover:scale-105 transition-all duration-300"
     >
       <img
-        src="https://placehold.co/300x300"
+        src="../../assets/images/anh-bac-si.png"
         alt="Bác sĩ B"
         class="w-32 h-32 mx-auto rounded-full object-cover mb-4 border-4 border-green-500 transition-all duration-300"
       />
       <h3 class="mt-2 font-bold text-xl text-green-700">BS. Trần Thị B</h3>
-      <p class="text-gray-600">Nhi khoa</p>
+      <p class="text-gray-600">Vật lý trị liệu</p>
     </div>
 
     <!-- Bác sĩ 3 -->
@@ -34,7 +36,7 @@
       class="text-center p-4 bg-white rounded-lg shadow-lg transform hover:scale-105 transition-all duration-300"
     >
       <img
-        src="https://placehold.co/300x300"
+        src="../../assets/images/anh-bac-si-27.png"
         alt="Bác sĩ C"
         class="w-32 h-32 mx-auto rounded-full object-cover mb-4 border-4 border-green-500 transition-all duration-300"
       />
@@ -46,12 +48,12 @@
       class="text-center p-4 bg-white rounded-lg shadow-lg transform hover:scale-105 transition-all duration-300"
     >
       <img
-        src="https://placehold.co/300x300"
+        src="../../assets/images/anh-bac-si.png"
         alt="Bác sĩ C"
         class="w-32 h-32 mx-auto rounded-full object-cover mb-4 border-4 border-green-500 transition-all duration-300"
       />
       <h3 class="mt-2 font-bold text-xl text-green-700">BS. Lê Văn C</h3>
-      <p class="text-gray-600">Tiêm chủng</p>
+      <p class="text-gray-600">Khoa xương kh</p>
     </div>
   </div>
 </section>
