--- a/src/components/why-chosse.html
+++ b/src/components/why-chosse.html
@@ -1,5 +1,7 @@
-<section class="bg-green-100 py-12">
-  <h2 class="text-center text-3xl font-semibold text-green-600 mb-8">
+<section class="py-12">
+  <h2
+    class="text-center bg-green-50 p-6 text-2xl md:text-3xl font-bold text-green-600 mb-8"
+  >
     TẠI SAO BẠN CHỌN CHÚNG TÔI?
   </h2>
   <div class="grid md:grid-cols-3 gap-6 px-6">
@@ -7,11 +9,13 @@
     <div
       class="bg-white p-6 shadow-lg rounded-lg hover:shadow-xl transition-all duration-300 text-center"
     >
-      <div
-        class="bg-red-500 text-white w-16 h-16 mx-auto flex items-center justify-center rounded-full mb-4"
-      >
-        <i class="fas fa-certificate text-2xl"></i>
-      </div>
+      <img
+        src="../../assets/images/giay-phep-hoat-dong.png"
+        alt=""
+        srcset=""
+        class="w-36 h-36 mx-auto flex items-center justify-center rounded-full mb-4"
+      />
+
       <h3 class="text-xl font-semibold mb-2">Giấy Phép Hoạt Động</h3>
       <p class="text-gray-700">
         Phòng Khám Đông Y Phục Sinh được cấp phép hoạt động bởi Sở Y Tế tỉnh
@@ -23,11 +27,12 @@
     <div
       class="bg-white p-6 shadow-lg rounded-lg hover:shadow-xl transition-all duration-300 text-center"
     >
-      <div
-        class="bg-red-500 text-white w-16 h-16 mx-auto flex items-center justify-center rounded-full mb-4"
-      >
-        <i class="fas fa-award text-2xl"></i>
-      </div>
+      <img
+        src="../../assets/images/chung-chi-hanh-nghe.png"
+        alt=""
+        srcset=""
+        class="w-36 h-36 mx-auto flex items-center justify-center rounded-full mb-4"
+      />
       <h3 class="text-xl font-semibold mb-2">Chứng Chỉ Hành Nghề</h3>
       <p class="text-gray-700">
         Đội ngũ bác sĩ, chuyên gia được Sở Y Tế Thanh Hóa cấp chứng chỉ hành
@@ -39,11 +44,12 @@
     <div
       class="bg-white p-6 shadow-lg rounded-lg hover:shadow-xl transition-all duration-300 text-center"
     >
-      <div
-        class="bg-red-500 text-white w-16 h-16 mx-auto flex items-center justify-center rounded-full mb-4"
-      >
-        <i class="fas fa-check-circle text-2xl"></i>
-      </div>
+      <img
+        src="../../assets/images/ngai-cuu-chua-benh-bluecare.png"
+        alt=""
+        srcset=""
+        class="w-36 h-36 mx-auto flex items-center justify-center rounded-full mb-4"
+      />
       <h3 class="text-xl font-semibold mb-2">Dược Liệu Sạch</h3>
       <p class="text-gray-700">
         Toàn bộ dược liệu sử dụng trong khám chữa bệnh tại Đông Y Phục Sinh là
