--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,4 +1,4 @@
-<header class="bg-white shadow z-50">
+<header class="bg-white shadow-md z-50">
   <div
     class="container mx-auto px-4 py-3 flex flex-col md:flex-row items-center justify-between"
   >
@@ -7,7 +7,7 @@
       <img
         src="/images/logo.png"
         alt="Logo Phòng khám"
-        class="h-10 sm:h-12 w-auto"
+        class="h-12 sm:h-16 w-auto"
       />
     </div>
 
@@ -16,33 +16,60 @@
       <p class="text-xs sm:text-sm text-green-600 font-medium uppercase">
         Sở Y Tế Thành Phố Cần Thơ
       </p>
-      <h1 class="text-green-700 text-xl sm:text-2xl font-bold">
+      <h1 class="text-green-700 text-2xl sm:text-3xl font-bold">
         PHÒNG KHÁM ĐÔNG Y
       </h1>
       <p class="text-xs sm:text-sm text-green-600">ORIENTAL MEDICINE CLINIC</p>
     </div>
 
-    <!-- Đăng ký tư vấn -->
-    <div class="w-full md:w-auto">
-      <button
-        class="bg-[#3FC482] hover:bg-[#35a870] text-white font-semibold md:rounded-full flex items-center justify-center gap-x-2 px-4 py-2 sm:px-6 sm:py-2.5 w-full md:w-48 transition"
+    <!-- Số DT -->
+    <button
+      class="bg-[#3FC482] hover:bg-[#35a870] text-white font-semibold rounded-full flex items-center justify-center gap-x-2 px-4 py-3 sm:px-2 sm:py-3.5 w-full md:w-60 transition-all duration-300 shadow-md hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-[#35a870] focus:ring-offset-2"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        fill="currentColor"
+        class="size-5"
       >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="h-5 w-5 sm:h-6 sm:w-6"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M6.75 2.994v2.25m10.5-2.25v2.25m-14.252 13.5V7.491a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v11.251m-18 0a2.25 2.25 0 0 0 2.25 2.25h13.5a2.25 2.25 0 0 0 2.25-2.25m-18 0v-7.5a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v7.5m-6.75-6h2.25m-9 2.25h4.5m.002-2.25h.005v.006H12v-.006Zm-.001 4.5h.006v.006h-.006v-.005Zm-2.25.001h.005v.006H9.75v-.006Zm-2.25 0h.005v.005h-.006v-.005Zm6.75-2.247h.005v.005h-.005v-.005Zm0 2.247h.006v.006h-.006v-.006Zm2.25-2.248h.006V15H16.5v-.005Z"
-          />
-        </svg>
-        Đăng ký tư vấn
-      </button>
-    </div>
+        <path d="M10.5 18.75a.75.75 0 0 0 0 1.5h3a.75.75 0 0 0 0-1.5h-3Z" />
+        <path
+          fill-rule="evenodd"
+          d="M8.625.75A3.375 3.375 0 0 0 5.25 4.125v15.75a3.375 3.375 0 0 0 3.375 3.375h6.75a3.375 3.375 0 0 0 3.375-3.375V4.125A3.375 3.375 0 0 0 15.375.75h-6.75ZM7.5 4.125C7.5 3.504 8.004 3 8.625 3H9.75v.375c0 .621.504 1.125 1.125 1.125h2.25c.621 0 1.125-.504 1.125-1.125V3h1.125c.621 0 1.125.504 1.125 1.125v15.75c0 .621-.504 1.125-1.125 1.125h-6.75A1.125 1.125 0 0 1 7.5 19.875V4.125Z"
+          clip-rule="evenodd"
+        />
+      </svg>
+
+      Hotline: 0989 861 548
+    </button>
   </div>
 </header>
+
+<!-- Đăng ký tư vấn -->
+<section>
+  <div
+    class="fixed bottom-8 -right-20 md:-right-20 transform -translate-x-1/2 z-50"
+  >
+    <button
+      class="bg-[#3FC482] hover:bg-[#35a870] text-white font-semibold rounded-full flex items-center justify-center gap-x-2 px-6 py-3 sm:px-8 sm:py-3.5 w-full transition-all duration-300 shadow-md hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-[#35a870] focus:ring-offset-2"
+    >
+      <!-- Icon -->
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="h-5 w-5 sm:h-6 sm:w-6"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M6.75 2.994v2.25m10.5-2.25v2.25m-14.252 13.5V7.491a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v11.251m-18 0a2.25 2.25 0 0 0 2.25 2.25h13.5a2.25 2.25 0 0 0 2.25-2.25m-18 0v-7.5a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v7.5m-6.75-6h2.25m-9 2.25h4.5m.002-2.25h.005v.006H12v-.006Zm-.001 4.5h.006v.006h-.006v-.005Zm-2.25.001h.005v.006H9.75v-.006Zm-2.25 0h.005v.005h-.006v-.005Zm6.75-2.247h.005v.005h-.005v-.005Zm0 2.247h.006v.006h-.006v-.006Zm2.25-2.248h.006V15H16.5v-.005Z"
+        />
+        <span class="">Đăng ký tư vấn</span>
+      </svg>
+      <!-- Text -->
+    </button>
+  </div>
+</section>
