--- a/src/components/service.html
+++ b/src/components/service.html
@@ -1,8 +1,11 @@
-<section class="bg-green-50 p-6">
-  <h2 class="text-center text-2xl font-semibold mb-6 text-green-600">
+<section class="p-6 mb-4">
+  <h2
+    class="text-center bg-green-50 p-6 text-2xl md:text-3xl font-bold text-green-700 uppercase mb-6"
+  >
     Dịch Vụ Chữa Bệnh Đông Y
   </h2>
-  <div class="grid md:grid-cols-3 gap-6">
+
+  <div class="grid md:grid-cols-3 lg:grid-cols-4 gap-6">
     <!-- Service 1 -->
     <div
       class="bg-white p-4 shadow-lg rounded-lg hover:shadow-xl transition-all duration-300"
